# instadig

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.forgejo/workflows/: publish.yml
.github/workflows/: docker-publish.yml  test.yml
src/: instapaper.rs  linkding.rs  main.rs
