[package]
name = "instadig"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/gentlecat/instadig"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rss = "2.0.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
urlencoding = "2.1.3"
log = "0.4.26"
env_logger = "0.11.6"
